# calculated_cost

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  local.env  prod.env
backend/: Dockerfile  README.md  gunicorn_run.sh  uvicorn_run.sh
backend/app/: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/app/api/: auth.py  calculated_cost.py  routers.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2e81df19af6b_added_costrequest_table.py  c82f60c164d3_add_user_table.py  ce88341705d8_alter_user_table.py  f48a5adcf697_alter_costrequest_table.py
backend/app/models/: __init__.py  cost_request.py  user.py
backend/app/schemas/: cost_request.py
backend/app/services/: calculate_cost.py
