[tool.poetry]
name = "calculated_cost"
version = "0.1.0"
description = ""
authors = ["Alexander Golovnya <algol.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
alembic = "^1.4.2"
aioredis = "^1.3.1"
ujson = "^3.0.0"
fastapi-plugins = "^0.4.1"
flake8 = "^3.8.3"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^3.0.1"}
databases = {extras = ["postgresql"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
